# ai-recon-platform

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  ISSUE_KNOWN.md  LICENSE  PROJECT_STATUS.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml
src/recon_platform/: __init__.py  bootstrap.py  cli.py
src/recon_platform/a2a/: __init__.py  bus.py
src/recon_platform/active_recon/: __init__.py  base.py  models.py  runner.py  tools.py
src/recon_platform/agents/: __init__.py  active_recon.py  analysis.py  api_discovery.py  auth.py  base.py  browser.py  desktop.py  js_analysis.py  network.py  planner.py  recon.py  reporting.py  verification.py  vision.py
src/recon_platform/api/: __init__.py  app.py
src/recon_platform/api_discovery/: __init__.py  base.py  detectors.py  modules.py
src/recon_platform/auth/: __init__.py  credentials.py  discovery.py  forms.py  models.py  page.py  workflows.py
src/recon_platform/browser/: __init__.py  base.py  modules.py  session.py
src/recon_platform/core/: __init__.py  config.py  container.py  exceptions.py  logging.py
src/recon_platform/desktop/: __init__.py  backends.py  base.py  manager.py  models.py  modules.py  session.py
src/recon_platform/domain/: __init__.py  enums.py  interfaces.py  schemas.py
src/recon_platform/js_analysis/: __init__.py  analyzers.py  base.py  fetcher.py  modules.py
src/recon_platform/knowledge_graph/: __init__.py  graph.py
src/recon_platform/llm/: __init__.py  provider.py
src/recon_platform/mcp/: __init__.py  registry.py
src/recon_platform/memory/: __init__.py  store.py
src/recon_platform/network/: __init__.py  base.py  detectors.py  modules.py
src/recon_platform/orchestration/: __init__.py  graph.py  state.py
src/recon_platform/plugins/: __init__.py  active_recon.py  api_discovery.py  auth.py  base.py  desktop.py  js_analysis.py  network.py  registry.py  vision.py
src/recon_platform/recon/: __init__.py  authorization.py  base.py  modules.py
src/recon_platform/reporting/: __init__.py  renderers.py
src/recon_platform/verification/: __init__.py  headers.py
src/recon_platform/vision/: __init__.py  base.py  detector.py  models.py  modules.py  ocr.py  session.py
tests/: test_active_recon.py  test_analysis.py  test_api_discovery.py  test_auth.py  test_browser.py  test_bus.py  test_desktop.py  test_domain.py  test_js_analysis.py  test_network.py  test_pipeline.py  test_verification.py  test_vision.py
